Complete form added

--- a/Html/style.css
+++ b/Html/style.css
@@ -26,7 +26,7 @@ textarea {
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin: 10pxS;
+    margin: 10px;
 }
 
 fieldset{
